Step8 요구사항 충족
- Krane에 배포를 위한 Dockerfile 생성
- jar파일로 빌드할때 발생하는 문제 해결을 위해 build.gradle 수정
- 파일을 불러올때 경로를 classPath에서 받아오도록 수정