@@ -2,13 +2,10 @@ package bin.jayden.service;
 
 import bin.jayden.model.User;
 import bin.jayden.repository.UserRepository;
-import bin.jayden.util.Constants;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.io.File;
 import java.io.IOException;
-import java.nio.file.Files;
 import java.util.Iterator;
 import java.util.List;
 
@@ -21,8 +18,7 @@ public class UserService {
     }
 
     public String getUserListHtml() throws IOException {
-        File file = new File(Constants.RESOURCE_PATH + "/user/list.html");
-        byte[] htmlBytes = Files.readAllBytes(file.toPath());
+        byte[] htmlBytes = getClass().getResourceAsStream("/user/list.html").readAllBytes();
         String htmlString = new String(htmlBytes);
         StringBuilder listHtml = new StringBuilder();
         List<User> users = repository.getUserList();
